@@ -3,3 +3,4 @@ tinc = 1.0/
 &file_paras
 ninst=1/
 g_land.gln
+
