@@ -1,3 +1,12 @@
+2004-06-09 Ian Rutt
+ * Added up/downscaling mask to netcdf IO, and removed redundent code
+ * Added this to input2ncdf.f90
+ * Changed allocatable arrays to pointers in input2ncdf.f90, as the Compaq compiler
+   has problems passing arrays arguments with the allocatable attribute out of
+   subroutines
+ * Re-distributed initialisation code to avoid trying to calculate temperatures when
+   the model has no information about them.
+
 2004-06-09 Magnus Hagdorn
  * initialised pointers in glimmer_proj.f90 with NULL()
    (fixes bug)
